--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8"/>
   <link rel="icon" href="/favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GoFound Admin</title>
-
+  <title>日志查询</title>
 </head>
 <body>
 <style>
